--- a/1.1.md
+++ b/1.1.md
@@ -54,3 +54,36 @@
 		- Extraction of data patterns by applying different intelligent methods
 	- #### Pattern Evaluation
 		- looks at evaluating and recognizing extracted data patterns according to the relevance and interest measures
+	- ### Knowledge Representation
+		- Visualization and knowledge representation techniques to present the mined knowledge to users
+- # Data Mining Technique
+	- ## Classification
+		- Analysis used to retrieve important and relevant information about data and metadata
+		- helps classify data in different classes
+		- complex data mining technique that requires you to combine various attributes together into discernable categories
+		- you can then use these categories to draw further conclusions
+	- ## Clustering
+		- Classification, but involves grouping chunks of data together based on their categories
+	- ## Regression
+		- Data mining technique that identifies and analyzes the relationship between variables
+		- Identifies the likelihood of specific variable given the presence of other variables
+		- Primarily used as a form of planning and modeling
+	- ## Association Rules
+		- Finds association between two or more items
+		- Discovers hidden patterns in data set
+		- look for events or attributes that are highly correlated with another event or attribute
+	- ## Outlier Detection
+		- Understanding anomalies in your dataset and why they occur
+		- Can be used in variety of domains such as intrusion, detection, fraud
+	- ## Sequential Patterns
+		- Helps discover or identify similar patterns or trends in transaction data for a certain period
+		- recognition of some aberration in your data happening at regular intervals
+	- ## Prediction
+		- Combination of other data mining techniques
+		- Analyzes past events or instances in a right sequence for predicting a future event
+		- To protect types of data you'll see in the future
+		- Recognizing and understanding historical trends can help give accurate predictions
+	- What type of data attribute has values with a meaningful order or ranking, where the magnitude between successive values is not known? 
+		- # Ordinal 
+	- What type of data attribute has values which are categories, states, or “names of things”?
+		- # Nominal
